# hadruki-text-extended

./: .gitignore  README.md  package.yaml  stack.yaml  text-extended.cabal
src/Data/Text/: Extended.hs
test/: Spec.hs
