name:                text-extended
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dvekeman/text-extended#readme
license:             BSD3
license-file:        LICENSE
author:              Dieter Vekeman
maintainer:          dieter.vekeman@gmail.com
copyright:           (c) 2016 Dieter Vekeman
category:            CLI Tool
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Text.Extended
  build-depends:       base >= 4.7 && < 5
                     , text
  default-language:    Haskell2010

test-suite text-extended-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , text-extended
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dvekeman/text-extended
